--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "description": "",
   "dependencies": {
     "fastify": "^4.28.1",
+    "knex": "^3.1.0",
+    "sqlite3": "^5.1.7",
     "typescript": "^5.5.3"
   },
   "devDependencies": {
