--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "fastify": "^4.28.1",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
