--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "02-api-rest-nodejs",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --import tsx ./node_modules/.bin/knex",
@@ -18,6 +21,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "knex": "^3.1.0",
+    "pg": "^8.12.0",
     "sqlite3": "^5.1.7",
     "typescript": "^5.5.3",
     "zod": "^3.23.8"
